word wrap fix

--- a/app/assets/stylesheets/components/_discussion.scss
+++ b/app/assets/stylesheets/components/_discussion.scss
@@ -1,8 +1,8 @@
-.question-title {
+.discussion-title {
   color: $blue-dark;
 }
 
-.question-description {
+.discussion-description {
   padding-top: 20px;
   font-size: 14px;
 }
