--- a/app/assets/stylesheets/pages/discussion.scss
+++ b/app/assets/stylesheets/pages/discussion.scss
@@ -36,7 +36,7 @@
     }
   }
 
-  .question-selected-container {
+  .discussion-selected-container {
     padding: 20px 40px;
   }
 }
